# Census-Consensus

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  license.md  notes.md  package.json  readme.md  rust-toolchain.toml
assets/: results-explanation.md
db/migrations/: 20260111121054_initial.down.sql  20260111121054_initial.up.sql
db/queries/: chapter_id.sql  chapter_title.sql  create_or_update_user.sql  create_story_update.sql  delete_all_sessions_by_user_id.sql  delete_question.sql  delete_user_ban.sql  get_banned_user_by_id.sql  option_order_rank.sql  question_id.sql
db/queries/delete/: chapter.sql  option.sql
db/queries/select/: all_chapters.sql  chapter_order.sql
db/queries/update/: chapter_order.sql  chapter_vote_duration.sql  option_writing_id.sql  user_feedback.sql  user_type.sql
migrations/: 20260111121054_initial.down.sql  20260111121054_initial.up.sql  20260317105106_vote-option.down.sql  20260317105106_vote-option.up.sql  20260319081642_settings.down.sql  20260319081642_settings.up.sql  20260416163024_event-complete.down.sql  20260416163024_event-complete.up.sql
queries/delete/: all_story_updates.sql  token.sql  writing.sql
queries/insert/: token.sql  user.sql
queries/select/: all_banned_users.sql  all_tokens.sql  all_users.sql  question_chapter_id.sql  token.sql  tokens_user_id.sql  user_id.sql
queries/update/: banned_user_reason.sql  chapter_intro_text.sql  chapter_minutes_left.sql  option_op_number.sql  option_text.sql  question_chapter_id.sql  question_chapter_order.sql  question_claimed_by.sql  question_response_percent.sql  question_text.sql  user_pfp_url.sql  writing_revision.sql
src/: app.rs  auth.rs  css.css  database.rs  db.rs  endpoints.rs  env_vars.rs  fimfic_cfg.rs  fimfic_config.rs  html_templates.rs  http.rs  json.rs  lib.rs  main.rs  mane.js  rand.rs  result_formatter.rs  server_config.rs  structs.rs  style.css  utility.rs
