[package]
name = "april-fools-2026-backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
actix-files = "0.6.10"
actix-web = { version = "4.13.0", features = ["macros"] }
anyhow = "1.0.102"
base64ct = { version = "1.8.3", features = ["std"] }
bon = "3.9.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
lightningcss = "1.0.0-alpha.70"
maud = "0.27.0"
pest = "2.8.6"
pest-derive = { package = "pest_derive", version = "2.8.6" }
pony = { git = "https://github.com/SilkRose/Pony", rev = "8443bd10e99954471ad0d80c01bb8b7da463781c" }
rand = { version = "0.10.0", default-features = false, features = [
	"chacha",
	"sys_rng",
] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-json = { package = "serde_json", version = "1.0.149" }
serde-urlencoded = { package = "serde_urlencoded", version = "0.7.1" }
sqlx = { version = "0.8.6", default-features = false, features = [
	"chrono",
	"macros",
	"migrate",
	"postgres",
	"runtime-tokio",
	"tls-rustls",
] }
url = "2.5.8"

[profile.dev.package."*"]
opt-level = 3
