[package]
name = "census-consensus"
version = "1.0.2"
description = "Silk Rose's 2026 April Fools event code."
repository = "https://github.com/SilkRose/Census-Consensus"
authors = ["Silk Rose", "Meadowsys"]
edition = "2024"
license = "MIT"
publish = false

[dependencies]
actix-files = "0.6.10"
actix-web = { version = "4.13.0", features = ["macros"] }
anyhow = "1.0.102"
base64ct = { version = "1.8.3", features = ["std"] }
bon = "3.9.1"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
lightningcss = "1.0.0-alpha.71"
maud = "0.27.0"
pest = "~2.8.6"
pest-derive = { package = "pest_derive", version = "~2.8.6" }
pony = { git = "https://github.com/SilkRose/Pony", rev = "323e8aa197243e205228b466175ce3e084f59c41" }
rand = { version = "0.10.0", default-features = false, features = [
	"chacha",
	"sys_rng",
] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-json = { package = "serde_json", version = "1.0.149" }
serde-urlencoded = { package = "serde_urlencoded", version = "0.7.1" }
sqlx = { version = "0.8.6", default-features = false, features = [
	"chrono",
	"macros",
	"migrate",
	"postgres",
	"runtime-tokio",
	"tls-rustls",
] }
tokio = { version = "1.50.0", default-features = false }
url = "2.5.8"

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
