[package]
name = "census-consensus"
version = "1.1.0"
description = "Silk Rose's 2026 April Fools event code."
repository = "https://github.com/SilkRose/Census-Consensus"
authors = ["Silk Rose", "Meadowsys"]
edition = "2024"
license = "MIT"
publish = false

[dependencies]
actix-files = { version = "0.6.10" }
actix-web = { version = "4.13.0", features = ["macros"] }
anyhow = { version = "1.0.102" }
base64ct = { version = "1.8.3", features = ["std"] }
bon = { version = "3.9.1" }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = { version = "0.15.7" }
lightningcss = { version = "1.0.0-alpha.71" }
maud = { version = "0.27.0" }
pest = { version = "2.8.6" }
pest-derive = { version = "2.8.6", package = "pest_derive" }
pony = { git = "https://github.com/SilkRose/Pony", rev = "6240b03c24b3f9c3d7b6ab08578277e69a2667f2" }
rand = { version = "0.10.1", default-features = false, features = [
	"chacha",
	"sys_rng",
] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-json = { version = "1.0.149", package = "serde_json" }
serde-urlencoded = { version = "0.7.1", package = "serde_urlencoded" }
sqlx = { version = "0.8.6", default-features = false, features = [
	"chrono",
	"macros",
	"migrate",
	"postgres",
	"runtime-tokio",
	"tls-rustls",
] }
tokio = { version = "1.52.1", default-features = false }
url = "2.5.8"

[profile.dev]
opt-level = 0
debug-assertions = true
debug = true
incremental = true

[profile.release]
strip = true
opt-level = 3
debug-assertions = false
lto = true
codegen-units = 1
